--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,6 +1,6 @@
 <% include head.ejs%>
 
-    <div id='root'></div>
+    <div id='app'></div>
     <script src="/dist/bundle.js"></script>
 
 <% include foot.ejs%>
