--- a/client/src/components/CSS/Twitter.scss
+++ b/client/src/components/CSS/Twitter.scss
@@ -1,7 +1,28 @@
-// $total: blue;
-// $positive: green;
-// $neutral: sandybrown;
-// $negative: red;
+/* Reusable Styles
+======================== */
+$primary-black: #1a1a1a;
+$primary-green: #2bb656;
+$primary-blue: #1d67a7;
+$twitter-blue: #59BBFF;
+
+$background-dark-gray: #1a252f;
+$background-header-gray: #b3b3b3;
+$background-chart-gray: #f7f7f7;
+$background-light-gray: #d5d5d5;
+
+$text-black: #4d4d4d;
+$text-dark-gray: #666;
+$text-gray: #999;
+$CTA-green: #59cb59;
+$CTA-hover-green: #218d43;
+
+$total: blue;
+$positive: green;
+$neutral: sandybrown;
+$negative: red;
+
+$font-family: 'Open Sans', sans-serif;
+
 
 $font-family: 'Open Sans', sans-serif;
 
@@ -97,8 +118,6 @@ body {
       font-family: $font-family;
       font-weight: 600;
       color: white;
-      // text-transform: uppercase;
-      // transition: all 0.25s ease-in-out;
       }
     }
   }
@@ -107,26 +126,206 @@ body {
 // TweetList, Tweets
 .results {
   height: 700px;
+  
+   .dashboard {
+    height: 700px;
+    overflow-y: hidden;
+
+
+    h1 {
+      color: $text-black;
+      text-align: center;
+      font-size: 32px;
+      margin-bottom: 30px;
+    }
+
+    /* Activity Chart Styles
+    ======================== */
+    .twitter-activity {
+      width: 800px;
+      margin-right: auto;
+      margin-left: auto;
+      display: block;
+
+      h4 {
+        margin-top: 20px;
+        margin-bottom: 0;
+        padding: 15px 5px 10px;
+        color: black;
+        font-weight: 600;
+        border-radius: 5px 5px 0 0;
+        font-size: 20px;
+        text-align: center;
+        background-color: $background-header-gray;
+      }
+
+      .tweet-counters {
+        display: flex;
+        border-top: 1px solid $background-dark-gray;
+
+        .total {
+          width: 100%;
+          position: relative;
+          
+          h3 {
+            margin: 0;
+            padding: 10px 0;
+            color: black;
+            font-size: 14px;
+            text-align: center;
+            font-weight: 600;
+            background-color: $background-light-gray;
+          }
+
+          .total-tweets {
+            height: 5px;
+            background-color: $twitter-blue;
+          }
+
+          #twit {
+            height: 5px;
+            width: 10px
+          }  
+          .total-positive {
+            height: 5px;
+            background-color: green;
+          }
+
+          .total-neutral {
+            height: 5px;
+            background-color: goldenrod;
+          }
+
+          .total-negative {
+            height: 5px;
+            background-color: red;
+          }
+
+          .counter {
+            padding: 5px 0;
+            color: #737373;
+            font-size: 28px;
+            font-weight: 600;
+            text-align: center;
+            background-color: white;
+            transition: all 0.2s ease-in-out;
+
+            &.positive {
+              color: $positive;
+            }
+
+            
+            &.neutral {
+              color: $neutral;
+            }
+
+            &.negative {
+              color: $negative;
+            }
+          }
+
+          .total-tweets + .counter {
+            border-radius: 0 0 0 5px;
+          }
+
+          .total-negative + .counter {
+            border-radius: 0 0 5px 0;
+          }
+
+          .arrow {
+            position: absolute;
+            bottom: 20px;
+            right: 15px;
+            display: inline-block;
+            width: 0;
+            height: 0;
+            border-left: 10px solid transparent;
+            border-right: 10px solid transparent;
+            transition: all 0.2s ease-in-out;
+
+            &.positive {
+              border-bottom: 10px solid $positive;
+            }
+
+            &.neutral,
+            &.null {
+              border-bottom: 10px solid $neutral;
+            }
+
+            &.negative {
+              border-bottom: 10px solid $negative;
+            }
+          }
+        }
+      }
+
+      .overall-sentiment {
+        margin-top: 30px;
+        display: inline-block;
+        background-color: $background-chart-gray;
+        border-radius: 5px 5px 5px 5px;
+
+        h3 {
+          display: inline-block;
+          padding: 10px 0 10px 10px;
+          margin: 0;
+          width: 220px;
+          color: $text-black;
+          font-size: 24px;
+          border-right: 1px solid $background-dark-gray;
+          border-radius: 5px 0 0 5px;
+          background-color: $background-light-gray;
+        }
+
+        p {
+          display: inline-block;
+          margin-bottom: 0;
+          padding: 0 10px;
+          font-size: 24px;
+          color: $text-dark-gray;
+
+          &.positive {
+            color: $positive;
+          }
+
+          &.negative {
+            color: $negative;
+          }
+        }
+      }
+    }
+  }
 
   .stream {
-    height: 700px;
-    background-color: white;
-    padding: 0;
-    float: left;
-    // padding: 0 25px 0 15px;
+    height: 600px;
+    // background-color: white;
+    // padding: 0;
+    // float: left;
+    
+    padding: 0 25px 0 15px;
+
+
+    // h1 {
+    //   margin-bottom: 0;
+    //   padding: 15px 5px 10px;
+    //   border-radius: 5px 5px 0 0;
+    //   font-size: 20px;
+    //   text-align: center;
+    // }
 
     .viewTitle {
       margin-bottom: 0;
       padding: 15px 5px 10px;
       color: black;
-      border-radius: 0;
+      border-radius: 5px 5px 0 0;
       font-size: 20px;
+      font-weight: 600;
       text-align: center;
       background-color: #b3b3b3;
     }
 
     .tweetMap {
-      height: 600px;
+      height: 570px;
       background-color: white;
       padding-bottom: 20px;
       overflow-y: scroll;
@@ -173,8 +372,33 @@ body {
             position: absolute;
             top: 5px;
             right: 0;
-            display: inline-block;   
-          }         
+            display: inline-block;            
+
+            &.Positive {
+              height: 10px;
+              width: 10px;
+              margin-right: 5px;
+              border-radius: 50%;
+              background-color: green;
+            }
+
+            &.Neutral,
+            &.Null {
+              height: 10px;
+              width: 10px;
+              margin-right: 5px;
+              border-radius: 50%;
+              background-color: goldenrod;
+            }
+
+            &.Negative {
+              height: 10px;
+              width: 10px;
+              margin-right: 5px;
+              border-radius: 50%;
+              background-color: red;
+            }
+          }     
 
           .text {
             font-size: 12px;
