--- a/Twitter.scss
+++ b/Twitter.scss
@@ -1,7 +1,33 @@
+/* Reusable Styles
+======================== */
+$primary-black: #1a1a1a;
+$primary-green: #2bb656;
+$primary-blue: #1d67a7;
+$twitter-blue: #59BBFF;
+
+$background-dark-gray: #1a252f;
+$background-header-gray: #b3b3b3;
+$background-chart-gray: #f7f7f7;
+$background-light-gray: #d5d5d5;
+
+$text-black: #4d4d4d;
+$text-dark-gray: #666;
+$text-gray: #999;
+$CTA-green: #59cb59;
+$CTA-hover-green: #218d43;
+
+$total: blue;
+$positive: green;
+$neutral: sandybrown;
+$negative: red;
+
+$font-family: 'Open Sans', sans-serif;
+
+
+$font-family: 'Open Sans', sans-serif;
+
 body {
-  // background-image: url('http://akveo.com/blur-admin/assets/img/blur-bg-blurred.jpg');
-  // background-image: url('https://drscdn.500px.org/photo/133812917/m%3D900/v2?webp=true&sig=d854c6ebc690529299c5def2911d11247a152bac26b96069fc9c962470474335');
-  // background-image: url('https://drscdn.500px.org/photo/121710303/m%3D900/v2?webp=true&sig=7bb04e89ebe560f2da3d7a2556827803fcc1892638e06e3069e461f3d3dfd5a6');
+  background-image: url('http://akveo.com/blur-admin/assets/img/blur-bg-blurred.jpg');
   background-repeat: no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -11,63 +37,50 @@ body {
   overflow-x: hidden;
 }
 
+.highchart {
+  width: 800px;
+}
+
+#highchart {
+  width: 800px;
+}
+
 // Header.JSX
 
+.header {
+  text-align: center;
+  
+  h1 {
+  color: white;
+  font-size: 40px;
+  font-weight: 700;
+  font-family: $font-family;
+  margin-top: 8px;
+  margin-bottom: 0px;
+  }
+
+  #twit {
+    height: 40px;
+    width: auto;
+    margin-right: 10px;
+    margin-bottom: 15px;
+  }  
+}
+
 .default {
-  height: 650px; 
-  background-image: linear-gradient(rgba(0,0,0, 0.1), rgba(0,0,0, 0.4));
+  height: 600px;
+  background-image: linear-gradient(rgba(0,0,0, 0.4), rgba(0,0,0, 0.8));
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom;
   position: relative;
   
-  .header {
-  position: absolute;
-  display: flex;
-  flex-direction: row;
-
-    h1 {
-      color: white;
-      font-size: 40px;
-      font-weight: 700; 
-      font-family: 'Open Sans', sans-serif;
-      margin-top: 2px;
-      margin-bottom: 0px;
-    }
-    h2 {
-      margin-top: 0px;
-    }
-
-    #twit {
-      height: 40px;
-      width: auto;
-      margin-right: 10px;
-      margin-bottom: 15px;
-    }  
-  }
-  
-  .cloud {
-    display: flex;
-    justify-content: flex-end;
-    flex-wrap: wrap;
-    h2 {
-      margin-top: 0px;
-    }
-    h5 {
-      font-size: 20px;
-      float: right;
-      margin-right: 10px;
-      color: white;
-    }
-  }
-
   .content {
   position: absolute;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 600px;
-  align-items: center;
+  height: 700px;
 
     h1, h2 {
     color: white;
@@ -76,29 +89,16 @@ body {
 
     h1 {
     order: 2;
-    font-size: 1050%;
+    font-size: 40px;
     font-weight: 700;
-    margin-top: 0px;
     }
 
     h2 {
     order: 3;
-    font-size: 40px;
-    font-weight: 500;
+    font-size: 20px;
+    font-weight: 300;
     letter-spacing: 1px;
-    color:white;
-    }
-    
-    p {
-    order: 4;
-    font-weight: 500;
-    margin-top: 20px;
-    color: white;
-    width: 50%;
-    left: 50%;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
+    color: #cfcfcf;
     }
 
     #twit {
@@ -115,10 +115,15 @@ body {
     margin-right: auto;
     margin-left: auto;
 
+      input:focus {
+      border: 1px solid #59BBFF;
+      box-shadow: 0 0 4px #59BBFF;
+      }
+
       .btn-default {
       background-color: #59BBFF;
       border-color: #59BBFF;
-      font-family: 'Open Sans', sans-serif;
+      font-family: $font-family;
       font-weight: 600;
       color: white;
       }
@@ -128,25 +133,22 @@ body {
 
 // TweetList, Tweets
 .results {
-  height: 700px;
-  background-image: linear-gradient(rgba(0,0,0, 0.4), rgba(0,0,0, 0.8));
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: bottom;
-  position: relative;
+  height: 570px;
   
    .dashboard {
-    height: 700px;
+    height: 570px;
     overflow-y: hidden;
 
 
     h1 {
-      color: black;
+      color: $text-black;
       text-align: center;
       font-size: 32px;
       margin-bottom: 30px;
     }
 
+    /* Activity Chart Styles
+    ======================== */
     .twitter-activity {
       width: 800px;
       margin-right: auto;
@@ -162,12 +164,12 @@ body {
         border-radius: 5px 5px 0 0;
         font-size: 20px;
         text-align: center;
-        background-color: gray;
+        background-color: $background-header-gray;
       }
 
       .tweet-counters {
         display: flex;
-        border-top: 1px solid #1a252f;;
+        border-top: 1px solid $background-dark-gray;
 
         .total {
           width: 100%;
@@ -180,12 +182,12 @@ body {
             font-size: 14px;
             text-align: center;
             font-weight: 600;
-            background-color: #d5d5d5;
+            background-color: $background-light-gray;
           }
 
           .total-tweets {
             height: 5px;
-            background-color: #59BBFF;
+            background-color: $twitter-blue;
           }
 
           #twit {
@@ -217,16 +219,16 @@ body {
             transition: all 0.2s ease-in-out;
 
             &.positive {
-              color: green;
+              color: $positive;
             }
 
             
             &.neutral {
-              color: sandybrown;
+              color: $neutral;
             }
 
             &.negative {
-              color: red;
+              color: $negative;
             }
           }
 
@@ -237,13 +239,38 @@ body {
           .total-negative + .counter {
             border-radius: 0 0 5px 0;
           }
+
+          .arrow {
+            position: absolute;
+            bottom: 20px;
+            right: 15px;
+            display: inline-block;
+            width: 0;
+            height: 0;
+            border-left: 10px solid transparent;
+            border-right: 10px solid transparent;
+            transition: all 0.2s ease-in-out;
+
+            &.positive {
+              border-bottom: 10px solid $positive;
+            }
+
+            &.neutral,
+            &.null {
+              border-bottom: 10px solid $neutral;
+            }
+
+            &.negative {
+              border-bottom: 10px solid $negative;
+            }
+          }
         }
       }
 
       .overall-sentiment {
         margin-top: 30px;
         display: inline-block;
-        background-color: gray;
+        background-color: $background-chart-gray;
         border-radius: 5px 5px 5px 5px;
 
         h3 {
@@ -251,11 +278,11 @@ body {
           padding: 10px 0 10px 10px;
           margin: 0;
           width: 220px;
-          color: black;
+          color: $text-black;
           font-size: 24px;
-          border-right: 1px solid #1a252f;;
+          border-right: 1px solid $background-dark-gray;
           border-radius: 5px 0 0 5px;
-          background-color: #d5d5d5;
+          background-color: $background-light-gray;
         }
 
         p {
@@ -263,15 +290,36 @@ body {
           margin-bottom: 0;
           padding: 0 10px;
           font-size: 24px;
-          color: black;
+          color: $text-dark-gray;
+
+          &.positive {
+            color: $positive;
+          }
+
+          &.negative {
+            color: $negative;
+          }
         }
       }
     }
   }
 
   .stream {
-    height: 600px;
+    height: 700px;
+    // background-color: white;
+    // padding: 0;
+    // float: left;
+    
     padding: 0 25px 0 15px;
+
+
+    // h1 {
+    //   margin-bottom: 0;
+    //   padding: 15px 5px 10px;
+    //   border-radius: 5px 5px 0 0;
+    //   font-size: 20px;
+    //   text-align: center;
+    // }
 
     .viewTitle {
       margin-bottom: 0;
@@ -281,11 +329,11 @@ body {
       font-size: 20px;
       font-weight: 600;
       text-align: center;
-      background-color: gray;
+      background-color: #b3b3b3;
     }
 
     .tweetMap {
-      height: 570px;
+      height: 600px;
       background-color: white;
       padding-bottom: 20px;
       overflow-y: scroll;
@@ -332,8 +380,34 @@ body {
             position: absolute;
             top: 5px;
             right: 0;
-            display: inline-block;               
-          }
+            display: inline-block;            
+
+            &.Positive {
+              height: 10px;
+              width: 10px;
+              margin-right: 5px;
+              border-radius: 50%;
+              background-color: green;
+            }
+
+            &.Neutral,
+            &.Null {
+              height: 10px;
+              width: 10px;
+              margin-right: 5px;
+              border-radius: 50%;
+              background-color: goldenrod;
+            }
+
+            &.Negative {
+              height: 10px;
+              width: 10px;
+              margin-right: 5px;
+              border-radius: 50%;
+              background-color: red;
+            }
+          }     
+
           .text {
             font-size: 12px;
           }
@@ -343,23 +417,15 @@ body {
   }
 }
 
-// HistoryChart.jsx
 
-.HistoryChart {
-  background-image: linear-gradient(rgba(0,0,0, 0.8), rgba(0,0,0, 0.8));
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: bottom;
-  position: relative;
-  margin-top: -20px;
-  padding: 0;
-  height: 500px;
+
+
+// Footer.jsx
+
+.footer {
   h1 {
     font-size: 40px;
     color: white;
     text-align: center;
-    border-top: 2px solid #ccc;
-    box-shadow: 0 0 1px 1px rgba(0,0,0, 0.2);
-
   }
 }
